# cliparse

./: .gitignore  .gitmodules  FontCore  README.md  pyproject.toml  raw_github_urls.txt
examples/: .gitignore  simple.py
examples/batch/: runner.py  script_a.py  script_b.py
src/cliparse/: __init__.py  errors.py  formatting.py  logging.py  parser.py  registry.py
tests/: test_parser.py  test_registry.py
